[package]
name = "merkle-tree-stream"
description = "A stream that generates a merkle tree based on the incoming data."
version = "0.11.0"
repository = "https://github.com/datrs/merkle-tree-stream"
documentation = "https://docs.rs/merkle-tree-stream"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
flat-tree = { version = "4.1.0", git = "https://github.com/bltavares/flat-tree", branch = "usize-to-u64" }

[dev-dependencies]
hex = "0.4.2"
quickcheck = "0.9.2"
crypto-hash = "0.3.4"
async-std = "1.5.0"
